--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                 )
             }
 
-            let boolean = (sekolah && butaWarna && minus)
+            const boolean = (sekolah && butaWarna && minus)
                 && (!sekolah.includes("Pilih") && !butaWarna.includes("Pilih") && !minus.includes("Pilih"));
 
             return (
