--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                         {checkPoltekipPoltekim() ? <ListItem title="POLTEKIP/POLTEKIM" page="cek-poltekip-poltekim" /> : ""}
                         {checkSSN() ? <ListItem title="POLTEK SSN" page="cek-poltek-ssn" /> : ""}
                         {checkKemenhub() ? <ListItem title="SEKDIN KEMENHUB" page="cek-kemenhub" /> : ""}
-                        {checkSTIS() ? <ListItem title="POLSTAT STIS" page="cek-polstat-stis" /> : ""}
+                        {checkSTIS() ? <ListItem title="POLSTAT STIS" page="cek-stis" /> : ""}
                         {checkkSTMKG() ? <ListItem title="STMKG" page="cek-stmkg" /> : ""}
                         {checkSTIN() ? <ListItem title="STIN" page="cek-stin" /> : ""}
                     </React.Fragment>
