Oke menambahkan header pada tabel

--- a/index.html
+++ b/index.html
@@ -557,6 +557,13 @@
 
             return (
                 <React.Fragment>
+                    <Partials.Header text={(() => (
+                        <React.Fragment>
+                            <span>10 Top Sekolah Kedinasan Dengan Tingkat Persaingan Tertinggi</span>
+                            <hr />
+                            <span>Pada Seleksi Masuk Tahun 2023</span>
+                            </React.Fragment>
+                    ))()} />
                     <table className="table table-striped">
                         <thead>
                             <tr>
