variabel beforePage merujuk pada variabel activePage

--- a/index.html
+++ b/index.html
@@ -1130,7 +1130,7 @@
     <script type="text/babel">
         function App() {
             const [activePage, setActivePage] = React.useState("home");
-            const [beforePage, setBeforePage] = React.useState("home");
+            const [beforePage, setBeforePage] = React.useState(activePage);
             const [sekolah, setSekolah] = React.useState();
             const [butaWarna, setButawarna] = React.useState();
             const [minus, setMinus] = React.useState();
