--- a/index.html
+++ b/index.html
@@ -460,14 +460,14 @@
 
                 return (
                     <React.Fragment>
-                        {checkIPDN() ? <ListItem title="IPDN" page="cek-ipdn" /> : ""}
-                        {checkSTAN() ? <ListItem title="STAN" page="cek-stan" /> : ""}
-                        {checkPoltekipPoltekim() ? <ListItem title="POLTEKIP/POLTEKIM" page="cek-poltekip-poltekim" /> : ""}
-                        {checkSSN() ? <ListItem title="POLTEK SSN" page="cek-poltek-ssn" /> : ""}
-                        {checkKemenhub() ? <ListItem title="SEKDIN KEMENHUB" page="cek-kemenhub" /> : ""}
-                        {checkSTIS() ? <ListItem title="POLSTAT STIS" page="cek-stis" /> : ""}
-                        {checkkSTMKG() ? <ListItem title="STMKG" page="cek-stmkg" /> : ""}
-                        {checkSTIN() ? <ListItem title="STIN" page="cek-stin" /> : ""}
+                        {checkIPDN() && <ListItem title="IPDN" page="cek-ipdn" />}
+                        {checkSTAN() && <ListItem title="STAN" page="cek-stan" />}
+                        {checkPoltekipPoltekim() && <ListItem title="POLTEKIP/POLTEKIM" page="cek-poltekip-poltekim" />}
+                        {checkSSN() && <ListItem title="POLTEK SSN" page="cek-poltek-ssn" />}
+                        {checkKemenhub() && <ListItem title="SEKDIN KEMENHUB" page="cek-kemenhub" />}
+                        {checkSTIS() && <ListItem title="POLSTAT STIS" page="cek-stis" />}
+                        {checkkSTMKG() && <ListItem title="STMKG" page="cek-stmkg" />}
+                        {checkSTIN() && <ListItem title="STIN" page="cek-stin" />}
                     </React.Fragment>
                 )
             }
@@ -539,9 +539,6 @@
                     <Partials.Header text="YUK CEK TINGKAT MINUS MATA KAMU" />
 
                     <Partials.SelectInput label="Pilihan Sekolah" options={options} onChange={onChange} selected={selected} />
-
-                    <div className="d-flex justify-content-evenly">
-                    </div>
 
                     <Partials.ButtonGroup Button1={() => <Button1 />} Button2={() => <Button2 />} />
                 </div>
