Typo tulisan class seharusnya className

--- a/index.html
+++ b/index.html
@@ -997,11 +997,11 @@
                                     <li className="list-group-item">Mengingat persaingan masuk <b>{persainganMasuk ? persainganMasuk : "KOSONG"}</b> sangat ketat, maka perlu sangat intensive belajar SKD dan Psikologi di Program VIP Offline</li>
                                     <li className="list-group-item">
                                         <span>Cek fasilitas bimbingan belajar jika kalian memilih</span>
-                                        <a href="https://panara.id" class="btn btn-secondary">Program VIP Online</a>
+                                        <a href="https://panara.id" className="btn btn-secondary">Program VIP Online</a>
                                     </li>
                                     <li className="list-group-item">
                                         <span>Apabila ingin bergabung pada paket di atas atau melihat perbandingannya dengan paket bimbel lainnya</span>
-                                        <a href="https://panara.id" class="btn btn-info">https://panara.id</a>
+                                        <a href="https://panara.id" className="btn btn-info">https://panara.id</a>
                                     </li>
                                 </ul>
                             </div>
@@ -1010,11 +1010,11 @@
                                 <ul className="list-group">
                                     <li className="list-group-item">
                                         <span>Untuk informasi lebih lanjut mengenai bimbingan belajar tersebut dapat mengunjungi laman website berikut ini</span>
-                                        <a href="https://panara.id" class="btn btn-success">Klik Disini</a>
+                                        <a href="https://panara.id" className="btn btn-success">Klik Disini</a>
                                     </li>
                                     <li className="list-group-item">
                                         <span>Anda juga dapat berkonsultasi dengan admin kami melalui kontak berikut ini</span>
-                                        <a href="https://api.whatsapp.com/send?phone=6289668538522" class="btn btn-success">0896-6853-8522</a>
+                                        <a href="https://api.whatsapp.com/send?phone=6289668538522" className="btn btn-success">0896-6853-8522</a>
                                     </li>
                                 </ul>
                             </div>
