--- a/index.html
+++ b/index.html
@@ -457,17 +457,17 @@
 
                         return result;
                     }
-
+                    
                     return (
                         <React.Fragment>
-                            {checkIPDN() && <ListItem title="IPDN" page="cek-ipdn" />}
-                            {checkSTAN() && <ListItem title="STAN" page="cek-stan" />}
-                            {checkPoltekipPoltekim() && <ListItem title="POLTEKIP/POLTEKIM" page="cek-poltekip-poltekim" />}
-                            {checkSSN() && <ListItem title="POLTEK SSN" page="cek-poltek-ssn" />}
-                            {checkKemenhub() && <ListItem title="SEKDIN KEMENHUB" page="cek-kemenhub" />}
-                            {checkSTIS() && <ListItem title="POLSTAT STIS" page="cek-stis" />}
-                            {checkkSTMKG() && <ListItem title="STMKG" page="cek-stmkg" />}
-                            {checkSTIN() && <ListItem title="STIN" page="cek-stin" />}
+                            {checkIPDN() ? <ListItem title="IPDN" page="cek-ipdn" /> : ""}
+                            {checkSTAN() ? <ListItem title="STAN" page="cek-stan" /> : ""}
+                            {checkPoltekipPoltekim() ? <ListItem title="POLTEKIP/POLTEKIM" page="cek-poltekip-poltekim" /> : ""}
+                            {checkSSN() ? <ListItem title="POLTEK SSN" page="cek-poltek-ssn" /> : ""}
+                            {checkKemenhub() ? <ListItem title="SEKDIN KEMENHUB" page="cek-kemenhub" /> : ""}
+                            {checkSTIS() ? <ListItem title="POLSTAT STIS" page="cek-stis" /> : ""}
+                            {checkkSTMKG() ? <ListItem title="STMKG" page="cek-stmkg" /> : ""}
+                            {checkSTIN() ? <ListItem title="STIN" page="cek-stin" /> : ""}
                         </React.Fragment>
                     )
                 }
