--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
+        * {
+            -webkit-user-select: none;
+            -khtml-user-select: none;
+            -moz-user-select: none;
+            -o-user-select: none;
+            user-select: none;
+        }
+
+        img {
+            pointer-events: none;
+        }
+
         #content {
             width: fit-content;
         }
@@ -457,7 +469,7 @@
 
                         return result;
                     }
-                    
+
                     return (
                         <React.Fragment>
                             {checkIPDN() ? <ListItem title="IPDN" page="cek-ipdn" /> : ""}
