Merubah link tombol VIP Online

--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,7 @@
                                     <li className="list-group-item">Mengingat persaingan masuk <b>{persainganMasuk ? persainganMasuk : "KOSONG"}</b> sangat ketat, maka perlu sangat intensive belajar SKD dan Psikologi di Program VIP Offline</li>
                                     <li className="list-group-item">
                                         <span>Cek fasilitas bimbingan belajar jika kalian memilih</span>
-                                        <a href="https://panara.id" className="btn btn-secondary">Program VIP Online</a>
+                                        <a href="https://panaracourse.web.id/vip-kedinasan" className="btn btn-secondary">Program VIP Online</a>
                                     </li>
                                     <li className="list-group-item">
                                         <span>Apabila ingin bergabung pada paket di atas atau melihat perbandingannya dengan paket bimbel lainnya</span>
