Merubah tulisan pertanyaan menjadi # pada tes buta warna

--- a/index.html
+++ b/index.html
@@ -233,9 +233,9 @@
                                     <table className="table">
                                         <thead>
                                             <tr>
-                                                <th>Pertanyaan</th>
+                                                <th>#</th>
                                                 <th>Gambar</th>
-                                                <th>Jawaban Benar</th>
+                                                <th>Benar</th>
                                                 <th>Jawabanmu</th>
                                                 <th>Hasil</th>
                                             </tr>
