--- a/index.html
+++ b/index.html
@@ -1013,7 +1013,7 @@
                                     </li>
                                     <li className="list-group-item">
                                         <span>Apabila ingin bergabung pada paket di atas atau melihat perbandingannya dengan paket bimbel lainnya</span>
-                                        <a href="https://panaracourse.web.id" className="btn btn-info">https://panaracourse.web.id</a>
+                                        <a href="https://panaracourse.web.id/layanan" className="btn btn-info">https://panaracourse.web.id/layanan</a>
                                     </li>
                                 </ul>
                             </div>
