--- a/index.html
+++ b/index.html
@@ -46,12 +46,6 @@
 
     <div id="root"></div>
 
-    <script>
-        function randomID() {
-            return Math.random().toString(36).substring(2, 10);
-        }
-    </script>
-
     <script type="text/babel">
         const Partials = {
             Header: (props) => {
@@ -78,7 +72,7 @@
             },
 
             SelectInput: (props) => {
-                const id = randomID();
+                const id = React.useId();
                 const selected = props.selected;
                 const options = props.options;
                 const onChange = props.onChange;
