--- a/index.html
+++ b/index.html
@@ -391,7 +391,9 @@
             let result = true;
             const schools = [
               "SMA IPA",
-              "MA IPA"
+              "MA IPA",
+              "SMK TEKNIK INFORMATIKA/KOMPUTER",
+              "SMK TEKNIK ELEKTRONIKA"
             ];
             const blindEye = [
               "Tidak Minus",
@@ -421,6 +423,7 @@
               "MA IPA",
               "MA IPS",
               "MA ILMU KEAGAMAAN",
+              "MA BAHASA",
               "SMK TEKNIK INFORMATIKA/KOMPUTER"
             ];
             const blindEye = [
