Update informasi pada PoltekipPoltekim

--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
       STAN: props => {
         const data = [
           ["Sekdin", "STAN"],
-          ["Usia Saat Pembukaan", "Min 14 max 21 tahun"],
+          ["Usia Saat Pembukaan", "Min 14 Max 22 per 1 oktober"],
           ["Buta Warna", "Parsial"],
           ["Minus", "Tidak ada"],
           ["Silinder", "Tidak ada"],
@@ -746,7 +746,7 @@
       PoltekipPoltekim: props => {
         const data1 = [
           ["Sekdin", "POLTEKIP"],
-          ["Usia Saat Pembukaan", "Min 17 Max 23"],
+          ["Usia Saat Pembukaan", "Min 17 Max 23 per 15 Mei"],
           ["Buta Warna", "Tidak boleh"],
           ["Minus", "0"],
           ["Silinder", "0"],
@@ -761,7 +761,7 @@
 
         const data2 = [
           ["Sekdin", "POLTEKIM"],
-          ["Usia Saat Pembukaan", "Min 17 Max 23"],
+          ["Usia Saat Pembukaan", "Min 17 Max 23 per 15 Mei"],
           ["Buta Warna", "Tidak boleh"],
           ["Minus", "0"],
           ["Silinder", "0"],
@@ -1044,6 +1044,7 @@
         )
       },
 
+      // FIXME
       STAN: props => {
         return (
           <React.Fragment>
