--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
       STAN: props => {
         const data = [
           ["Sekdin", "STAN"],
-          ["Usia Saat Pembukaan", "Min 14 Max 22 per 1 oktober"],
+          ["Usia Saat Pembukaan", "Min 14 Max 22 (per 1 Oktober)"],
           ["Buta Warna", "Parsial"],
           ["Minus", "Tidak ada"],
           ["Silinder", "Tidak ada"],
@@ -746,7 +746,7 @@
       PoltekipPoltekim: props => {
         const data1 = [
           ["Sekdin", "POLTEKIP"],
-          ["Usia Saat Pembukaan", "Min 17 Max 23 per 15 Mei"],
+          ["Usia Saat Pembukaan", "Min 17 Max 23 (per 15 Mei)"],
           ["Buta Warna", "Tidak boleh"],
           ["Minus", "0"],
           ["Silinder", "0"],
@@ -761,7 +761,7 @@
 
         const data2 = [
           ["Sekdin", "POLTEKIM"],
-          ["Usia Saat Pembukaan", "Min 17 Max 23 per 15 Mei"],
+          ["Usia Saat Pembukaan", "Min 17 Max 23 (per 15 Mei)"],
           ["Buta Warna", "Tidak boleh"],
           ["Minus", "0"],
           ["Silinder", "0"],
@@ -817,7 +817,7 @@
 
         const data = [
           ["Sekdin", "POLTEK SSN"],
-          ["Usia Saat Pembukaan", "Min 17 Max 21 (per-desember)"],
+          ["Usia Saat Pembukaan", "Min 17 max 21 (per 31 Desember)"],
           ["Buta Warna", "Tidak boleh"],
           ["Minus", "1 D"],
           ["Silinder", "0"],
