--- a/index.html
+++ b/index.html
@@ -409,8 +409,12 @@
 
           function checkKemenhub() {
             let result = true;
+            // const blindEye = [
+              
+            // ];
 
             result &= "Tidak Buta Warna" === butaWarna ? true : false;
+            // result &= blindEye.includes(minus) ? true : false;
 
             return result;
           }
