--- a/index.html
+++ b/index.html
@@ -407,6 +407,7 @@
             return result;
           }
 
+          // FIXME
           function checkKemenhub() {
             let result = true;
             // const blindEye = [
