--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           ["MA IPS", "MA IPS"],
           ["MA ILMU KEAGAMAAN", "MA ILMU KEAGAMAAN"],
           ["MA BAHASA", "MA BAHASA"],
-          ["MA JURUSAN LAIN", "MA JURUSAN LAIN"],
+          ["MA JURUSAN LAINNYA", "MA JURUSAN LAINNYA"],
           ["SMK TEKNIK INFORMATIKA/KOMPUTER", "SMK TEKNIK INFORMATIKA/KOMPUTER"],
           ["SMK TEKNIK ELEKTRONIKA", "SMK TEKNIK ELEKTRONIKA"],
           ["SMK JURUSAN LAINNYA", "SMK JURUSAN LAINNYA"]
@@ -425,8 +425,10 @@
             const schools = [
               "SMA IPA",
               "SMA IPS",
+              "SMA JURUSAN LAINNYA",
               "MA IPA",
               "MA IPS",
+              "MA JURUSAN LAINNYA",
               "MA ILMU KEAGAMAAN",
               "MA BAHASA",
               "SMK TEKNIK INFORMATIKA/KOMPUTER"
