Merubah style flex pada Hasil

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
         function ListItem(props) {
           return (
             <li className="list-group-item">
-              <div className="d-flex justify-content-around">
+              <div className="d-flex justify-content-between">
                 <span>{props.title}</span>
                 <ButtonCek page={props.page} />
               </div>
