--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@
                 <ul>
                   <li>Teknik Audio Video</li>
                   <li>Teknik Elektronika Industri</li>
-                  <li>Teknik Mekatronika</li>
+                  <li>Teknik Robotik</li>
                   <li>Teknik Elektronika Daya dan Komunikasi</li>
                 </ul>
               </React.Fragment>
@@ -809,7 +809,6 @@
                 <ul>
                   <li>Rekayasa Perangkat Lunak</li>
                   <li>Teknik Komputer dan Jaringan </li>
-                  <li>Teknik Mekatronika</li>
                   <li>Sistem Informatika, Jaringan dan Aplikasi</li>
                 </ul>
               </React.Fragment>
@@ -824,11 +823,11 @@
             ["Silinder", "0"],
             ["SLTA", "SMA/MA/SMK"],
             ["Jurusan", <Pages.Cek.Partials.ListInformasi data={informasiJurusan} numbered={true} />],
-            ["Tinggi Badan", "Pria : 160 cm, Wanita : 15 cm"],
+            ["Tinggi Badan", "Pria : 160 cm, Wanita : 150 cm"],
             ["Gigi", <Pages.Cek.Partials.ListInformasi data={Pages.Cek.FINAL.informasiGigi} numbered={true} />],
             ["Bekas Luka", Pages.Cek.FINAL.informasiBekasLuka],
             ["Anamnesa", "Tidak cacat fisik dan mental, serta tidak memiliki penyakit bawaan dan/atau menular yang dapat mengganggu proses belajar"],
-            ["Ketentuan tambahan", ""]
+            ["Ketentuan tambahan", "Ketentuan Tambahan Poltek SSN:Bersedia menyerahkan sertifikat hasil UTBK-SNBT tahun sebelumnya ATAU tahun ini"]
           ]
 
           function Button2() {
