--- a/index.html
+++ b/index.html
@@ -396,12 +396,22 @@
           function checkIPDN() {
             let result = true;
             const blindEye = [
-              "Tidak Minus",
-              "Minus < 1"
+              "Tidak Minus"
+            ];
+            const schools = [
+              "SMA IPA",
+              "SMA IPS",
+              "SMA JURUSAN LAINNYA",
+              "MA IPA",
+              "MA IPS",
+              "MA JURUSAN LAINNYA",
+              "MA ILMU KEAGAMAAN",
+              "MA BAHASA"
             ];
 
             result &= "Tidak Buta Warna" === butaWarna ? true : false;
             result &= blindEye.includes(minus) ? true : false;
+            result &= schools.includes(sekolah) ? true : false;
 
             return result;
           }
