Menghapus text-center pada TebakKarakterButaWarna

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <div className="container p-5 card">
               <h1 className="mb-4 text-center">Test Kebutaan Warna</h1>
               <hr />
-              <div className="card p-2 text-center mb-2">
+              <div className="card p-2 mb-2">
                 <ul>
                   <li>Terdiri dari 5 pertanyaan berurutan yang diacak (tiap kali refresh / pindah halaman)</li>
                   <li>Hasil akan tampil setelah menjawab 5 pertanyaan</li>
