--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@
             ["Gigi", <Pages.Cek.Partials.ListInformasi data={Pages.Cek.FINAL.informasiGigi} numbered={true} />],
             ["Bekas Luka", Pages.Cek.FINAL.informasiBekasLuka],
             ["Anamnesa", "Tidak cacat fisik dan mental, serta tidak memiliki penyakit bawaan dan/atau menular yang dapat mengganggu proses belajar"],
-            ["Ketentuan tambahan", "Ketentuan Tambahan Poltek SSN:Bersedia menyerahkan sertifikat hasil UTBK-SNBT tahun sebelumnya ATAU tahun ini"]
+            ["Ketentuan tambahan", "Poltek SSN:Bersedia menyerahkan sertifikat hasil UTBK-SNBT tahun sebelumnya ATAU tahun ini"]
           ]
 
           function Button2() {
