style: Merubah ukuran img

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 
     img {
       margin: auto;
-      width: 400px;
-      height: 400px;
+      width: 100%;
+      height: 70%;
       display: block;
+      object-fit: cover;
     }
 
     #content {
