typo (informasiJurusan): Dari 'Leahlian' seharusnya 'Keahlian'

--- a/index.html
+++ b/index.html
@@ -901,7 +901,7 @@
             "MA JURUSAN LAINNYA",
             "MA ILMU KEAGAMAAN",
             "MA BAHASA",
-            "Lulusan SMK/MAk Bidang Leahlian Teknologi Informasi*"
+            "Lulusan SMK/MAk Bidang Keahlian Teknologi Informasi*"
           ];
 
           const data = [
